feat: Add UI Improvement Requirements document for Eagle Anki Metadata Inspector
- Introduced a comprehensive markdown document outlining the UI improvement requirements for version 2.0 of the Eagle Anki Metadata Inspector.
- Defined current and target UI states, key principles, design analysis, and detailed UI requirements including layout structure, typography, spacing, colors, and component specifications.
- Included visual mockups for light and dark themes, accessibility considerations, testing checklist, and success criteria.
- Document aims to align the UI with Eagle's native Inspector display style for a more integrated user experience.

--- a/Eagle Anki Metadata/manifest.json
+++ b/Eagle Anki Metadata/manifest.json
@@ -5,13 +5,13 @@
     "arch": "all",
     "name": "Eagle Anki Metadata",
     "logo": "/logo.png",
-    "keywords": [],
+    "keywords": ["anki", "apkg", "flashcard", "deck", "metadata"],
     "devTools": true,
     "preview": {
-        "jpg,png": {
+        "apkg": {
             "inspector": {
                 "path": "index.html",
-                "height": 100,
+                "height": 350,
                 "multiSelect": false
             }
         }
