--- a/Eagle Anki Metadata/package.json
+++ b/Eagle Anki Metadata/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "postinstall": "npm run bundle",
-    "bundle": "mkdir -p lib && cp node_modules/jszip/dist/jszip.min.js lib/ && cp node_modules/sql.js/dist/sql-wasm.js lib/ && cp node_modules/sql.js/dist/sql-wasm.wasm lib/",
+    "bundle": "mkdir -p lib && cp node_modules/jszip/dist/jszip.min.js lib/ && cp node_modules/sql.js/dist/sql-wasm.js lib/ && cp node_modules/sql.js/dist/sql-wasm.wasm lib/ && cp node_modules/fzstd/umd/index.js lib/fzstd.min.js",
     "build": "node scripts/build.js",
     "build:zip": "npm run build && cd ../dist && zip -r \"Eagle Anki Metadata.eagleplugin.zip\" \"Eagle Anki Metadata.eagleplugin\" && echo '✅ Created Eagle Anki Metadata.eagleplugin.zip'",
     "clean": "rm -rf ../dist"
